<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.suvajit.weatherdemo.MainActivity"
    android:background="@drawable/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:textColor="#6E2C00"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textSize="35sp"
        android:textColor="#117A65" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="@string/search_hint"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="61dp"
        android:inputType="text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_text"
        android:id="@+id/button"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_below="@+id/button"
        android:textSize="25sp"
        android:padding="5dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#d20c05"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_alignParentEnd="true"
        android:hint="@string/temp"
        android:textColor="#1a0d00"
        android:textSize="19sp"
        android:padding="5dp"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:hint="@string/humidity"
        android:textSize="19sp"
        android:padding="5dp"
        android:textColor="#1a0d00"
        android:layout_below="@+id/editText3"
        android:layout_alignStart="@+id/editText3"
        android:layout_alignEnd="@+id/editText3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:layout_below="@+id/editText4"
        android:layout_alignParentEnd="true"
        android:hint="@string/pressure"
        android:textSize="19sp"
        android:padding="5dp"
        android:textColor="#1a0d00"
        android:layout_alignStart="@+id/editText4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Temperature:"
        android:id="@+id/textView4"
        android:layout_alignTop="@+id/editText3"
        android:layout_alignParentStart="true"
        android:textColor="#000066"
        android:textSize="19sp"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Humidity:"
        android:id="@+id/textView5"
        android:layout_below="@+id/editText3"
        android:layout_alignParentStart="true"
        android:textColor="#000066"
        android:textSize="19sp"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Preasure:"
        android:id="@+id/textView6"
        android:layout_alignTop="@+id/editText5"
        android:layout_alignParentStart="true"
        android:textColor="#000066"
        android:textSize="19sp"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Weather:"
        android:id="@+id/textView3"
        android:textColor="#000066"
        android:textSize="19sp"
        android:padding="5dp"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView8"
        android:hint="NA"
        android:textSize="19sp"
        android:padding="5dp"
        android:textColor="#1a0d00"
        android:textStyle="bold"
        android:layout_below="@+id/editText5"
        android:layout_alignStart="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />

</RelativeLayout>
